ArrayMode should not consider SpecOther when refining the base https://bugs.webkit.org/show_bug.cgi?id=113271

Reviewed by Geoffrey Garen.

9% speed-up on Octane/pdfjs.

* dfg/DFGArrayMode.cpp:
(JSC::DFG::ArrayMode::refine):



Canonical link: https://commits.webkit.org/131639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146887 268f45cc-cd09-0410-ab3c-d52691b4dbfc